<resources>
    <string name="app_name">StorySharing</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="resources">Resources</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_sign_up_prompt">Don\'t have an account?</string>
    <string name="title_activity_login">Log in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="create">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="title">title</string>
    <string name="body">body</string>
    <string name="email">email</string>
    <string name="submit">Submit</string>
    <string name="hotline">1-800-273-8255</string>
    <string name="website">website</string>
    <string name="help_someone">help someone</string>
    <string name="delete">delete post</string>
</resources>
