<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="@drawable/custom_border"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_photo"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/profile_photo"
        android:text="@string/title"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/bodyTextView"
        android:layout_width="295dp"
        android:layout_height="41dp"
        android:layout_below="@+id/titleTextView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/profile_photo"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="@string/body" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:text="@string/email" />

</RelativeLayout>