<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="146dp"
        android:layout_height="140dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lifeline" />

    <Button
        android:id="@+id/hotline"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="161dp"
        android:layout_height="39dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/hotline"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/website"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="161dp"
        android:layout_height="39dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/website"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hotline" />


    <Button
        android:id="@+id/help_someone"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="48dp"
        android:text="@string/help_someone"
        android:textColor="#F8F8F8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="332dp"
        android:layout_height="167dp"
        android:layout_marginTop="255dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quote" />
</androidx.constraintlayout.widget.ConstraintLayout>